Creating project Added CommandLineUtils

--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,10 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+# VS Coe
+.vscode
+
+# Project specific
+client_secrets.json
+broadcasts.json
