- Added output prefix - Added single file build to the project file

--- a/src/YouTubeCLI.csproj
+++ b/src/YouTubeCLI.csproj
@@ -4,6 +4,9 @@
     <AssemblyName>ytc</AssemblyName>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
+    <SelfContained>true</SelfContained>
+    <RuntimeIdentifier>win-x64</RuntimeIdentifier>
+     <PublishSingleFile>true</PublishSingleFile>
   </PropertyGroup>
 
   <ItemGroup>
