--- a/src/YouTubeCLI.csproj
+++ b/src/YouTubeCLI.csproj
@@ -7,6 +7,10 @@
     <StartupObject>YouTubeCLI.YouTubeCLI</StartupObject>
     <PublishSingleFile>true</PublishSingleFile>
     <SelfContained>true</SelfContained>
+    <Version>1.0.0</Version>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
+    <InformationalVersion>1.0.0</InformationalVersion>
   </PropertyGroup>
 
   <ItemGroup>
